syntax = "proto3";

package loom.server;
option go_package = "pb";

service Loom {
    rpc SubscribeJob(SubscribeJobRequest) returns (SubscribeJobResponse);
    rpc ReportJob(ReportJobRequest) returns (ReportJobResponse);
    rpc ReportJobDone(ReportJobDoneRequest) returns (ReportJobDoneResponse); 
}

message SubscribeJobRequest {
    string worker_id = 1;
    string topic_name = 2;
}

message SubscribeJobResponse {
    enum Status {
        NoJob = 0;
        NewJob = 1;
    }

    bytes job_id = 1;
    bytes job_msg = 2;
    Status job_status = 3;
}

message ReportJobRequest {
    bytes job_id = 1;
    string worker_id = 2;
    string topic_name = 3;
    bytes job_msg = 4;
}

message ReportJobResponse{}

message ReportJobDoneRequest {
    bytes job_id = 1;
    string worker_id = 2;
    string topic_name = 3;
}

message ReportJobDoneResponse {}

